--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
 }
 
 body {
-    background: #325259;
+    background: linear-gradient(to bottom right, #6ac9dd, #0C2C33);
 }
 
 main {
@@ -22,23 +22,32 @@ main {
     margin-bottom: 1%;
     background: #9CABAE;
     padding: 2% 2%;
+    border: black 1px solid;
 }
 
 .article__information-container {
+    background-color: white;
+    box-shadow: 10px 10px 10px #000;
     margin-left: 2%;
     padding-left: 2%;
-    border-left: black 1px solid
 }
 
 .article__main-photo {
     width: 30%;
     height: 40%;
     border-radius: 30px;
+    border: #0C2C33 2px solid;
 }
 
 .main__menu-container {
+    border: black 1px solid;
     background: #9CABAE;
     padding: 2%;
+}
+
+.main__menu-nav {
+    margin-right: 30%;
+    margin-left: 30%;
 }
 
 .news-container {
@@ -67,7 +76,6 @@ main {
 }
 
 footer {
-    background: #0C2C33;
     color: white;
 }
 
@@ -83,4 +91,58 @@ footer {
 {
     text-decoration: none;
     color: white;
+}
+
+aside {
+    background-color: black;
+    padding: 2%;
+    border-radius: 15%;
+    width: 15%;
+}
+.news-container__button {
+    display: inline-block;
+    padding: .75rem 1.25rem;
+    border-radius: 10rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 5px;
+    letter-spacing: .15rem;
+    transition: all .3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    margin-bottom: 1%;
+}
+
+.news-container__button:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #A1CFD9;
+    border-radius: 10rem;
+    z-index: -2;
+}
+
+.news-container__button:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: #0C2C33;
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1;
+}
+
+.news-container__button:hover {
+    color: #fff;
+}
+
+.news-container__button:hover:before {
+        width: 100%;
 }
