--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,35 @@
 header {
-    background: #A1CFD9;
-    width: 100%;
+    background: #92969D;
+    left: 0;
+    right: 0;
+    top: 0;
     text-align: center;
-    font-size: large;
-    font-weight: bolder;
-    text-shadow: 10px 10px 10px #000;
-    border: black 1px solid;
-    margin-bottom: 1%;
+    border-bottom: black 1px solid;
+    position: absolute;
+    display: inline;
 }
 
 body {
-    background: linear-gradient(to bottom right, #6ac9dd, #0C2C33);
+    background: linear-gradient(to bottom right, #95989D, #111926);
 }
 
 main {
     margin-bottom: 1%;
+    margin-top: 15%;
+}
+
+.header__emblem {
+    width: 8%;
+    float: left;
+}
+
+.header__text {
+    color: white;
+    font-size: large;
+    font-weight: bolder;
+    text-shadow: 10px 10px 10px #000;
+    float: right;
+    margin-right: 1%;
 }
 
 .article-container {
@@ -28,15 +43,16 @@ main {
 .article__information-container {
     background-color: white;
     box-shadow: 10px 10px 10px #000;
-    margin-left: 2%;
+    margin-left: -10%;
     padding-left: 2%;
 }
 
 .article__main-photo {
     width: 30%;
     height: 40%;
-    border-radius: 30px;
-    border: #0C2C33 2px solid;
+    border-radius: 15%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .main__menu-container {
@@ -50,29 +66,52 @@ main {
     margin-left: 30%;
 }
 
+.main__all-news-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+}
+
+.nav-container {
+    background-color: white;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-top: -2.1%;
+    border-left: #0f221e 20px solid;
+    border-right: #0f221e 20px solid;
+    border-bottom: #1f5545 20px solid;;
+    position: sticky;
+    left: 0;
+    right: 0px;
+}
 .news-container {
-    background: white;
-    border: black 1px solid;
-    margin-left: 3%;
-    margin-right: 3%;
-    padding: 2% 5%;
-    min-width: 15%;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 30%; /* Ширина каждого блока */
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
-.main__menu-ref {
+.main__menu-button {
     padding: 2%;
     border: solid black 1px;
     margin: 2%;
     text-decoration: none;
 }
 
-.main__menu-ref:hover {
+.main__menu-button:hover {
     padding: 2%;
     border: solid black 1px;
-    box-shadow: 10px 5px 5px #3e5053;
+    box-shadow: 10px 5px 5px #112922;
     text-decoration: none;
     margin: 2%;
-    background: #A1CFD9;
+    background: #05dc9d;
 }
 
 footer {
@@ -87,8 +126,7 @@ footer {
     text-decoration: underline;
 }
 
-.footer-link:visited
-{
+.footer-link:visited {
     text-decoration: none;
     color: white;
 }
@@ -99,14 +137,20 @@ aside {
     border-radius: 15%;
     width: 15%;
 }
+
+.news-container__button-container{
+    display: inline-flex;
+    justify-content: center;
+    gap: 33%;
+
+}
 .news-container__button {
+    border: none;
     display: inline-block;
-    padding: .75rem 1.25rem;
-    border-radius: 10rem;
+    padding: 7.5% 1.25%;
     color: #fff;
     text-transform: uppercase;
-    font-size: 5px;
-    letter-spacing: .15rem;
+    font-size: 10px;
     transition: all .3s;
     position: relative;
     overflow: hidden;
@@ -121,8 +165,7 @@ aside {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #A1CFD9;
-    border-radius: 10rem;
+    background-color: #165a41;
     z-index: -2;
 }
 
@@ -135,7 +178,6 @@ aside {
     height: 100%;
     background-color: #0C2C33;
     transition: all .3s;
-    border-radius: 10rem;
     z-index: -1;
 }
 
@@ -144,5 +186,17 @@ aside {
 }
 
 .news-container__button:hover:before {
-        width: 100%;
+    width: 100%;
+}
+
+.footer__donate-container {
+    margin-right: 50%;
+    margin-left: 50%;
+    width: 20%;
+    height: 20%;
+}
+
+.footer__donate-button {
+    width: 10%;
+    height: 10%;
 }
