--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ header {
     border-bottom: black 1px solid;
     position: absolute;
     display: inline;
+    justify-content: center;
 }
 
 body {
@@ -18,6 +19,9 @@ main {
     margin-top: 15%;
 }
 
+footer {
+    justify-content: center;
+}
 .header__emblem {
     width: 8%;
     float: left;
@@ -64,6 +68,8 @@ main {
 .main__menu-nav {
     margin-right: 30%;
     margin-left: 30%;
+    display: flex;
+    justify-content: center;
 }
 
 .main__all-news-container{
@@ -189,14 +195,9 @@ aside {
     width: 100%;
 }
 
-.footer__donate-container {
-    margin-right: 50%;
-    margin-left: 50%;
-    width: 20%;
-    height: 20%;
-}
+.footer__heart-container {
+    margin-right: 45%;
+    margin-left: 45%;
+    color: rgba(255,50,82,0.79);
 
-.footer__donate-button {
-    width: 10%;
-    height: 10%;
 }
